objects/RelatedOpportunity__c.object
<CustomObject>
    <description>&lt;ROP&gt; related opportunities for BCR process</description>
    <fields>
        <fullName>AssociatedOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Opportunities (Associated Opportunity)</relationshipLabel>
        <relationshipName>Related_Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentArea__c</fullName>
        <formula>ExistingSpace__r.RentableArea__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentBudgetCapital__c</fullName>
        <formula>ExistingSpace__r.LatestJVBudget__r.TotalCapital__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Budget Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentBudgetRent__c</fullName>
        <formula>ExistingSpace__r.LatestJVBudgetedRent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Budget Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentBudgetSemiGrossRent__c</fullName>
        <formula>ExistingSpace__r.LatestJVBudgetedSemiGrossRent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Budget Semi Gross Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>Related_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentLTF__c</fullName>
        <formula>ExistingSpace__r.LatestJVBudget__r.AnnualisedPVRentNet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current LTF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentMATSales__c</fullName>
        <formula>ExistingSpace__r.CurrentLease__r.MATSales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current MAT Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentOutgoingsType__c</fullName>
        <formula>CASE(ExistingSpace__r.CurrentLease__r.OutgoingsLeaseType__c, 
&apos;NT&apos;, &apos;Net&apos;, 
&apos;GR&apos;, &apos;Gross&apos;, 
&apos;S1&apos;, &apos;Semi Gross&apos;, 
&apos;ER&apos;, &apos;Invalid&apos;,
 &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Outgoings Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentRent__c</fullName>
        <formula>ExistingSpace__r.CurrentRent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExistingRetailer__c</fullName>
        <formula>ExistingSpace__r.CurrentRetailer__r.TradingName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing Retailer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExistingSpace__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing Space</label>
        <referenceTo>Space__c</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>Related_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpiryDate__c</fullName>
        <formula>ExistingSpace__r.CurrentLeaseExpiryDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PrimaryOpportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>Related_Opportunities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SemigrossCurrentRent__c</fullName>
        <formula>ExistingSpace__r.CurrentSemiGrossRent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Semigross Current Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TermDateofPreviousTenant__c</fullName>
        <formula>ExistingSpace__r.CurrentLeaseStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Date of Previous Tenant</label>
        <type>Date</type>
    </fields>
    <label>Related Opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PrimaryOpportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ROP-{00000}</displayFormat>
        <label>Related Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>